--- a/FunctionCalling.ipynb
+++ b/FunctionCalling.ipynb
@@ -8,7 +8,7 @@
         "g3GwUXT06trS",
         "uLXgrLOt6n33"
       ],
-      "authorship_tag": "ABX9TyMI08s4hW9LEcE8czgkoOS0",
+      "authorship_tag": "ABX9TyPh7tenCxUH2CGzdHG42Z3f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,28 +57,28 @@
       "metadata": {
         "id": "kcmKMuMjkYRz"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ry0M9QvTOLHP",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fcf83355-21b3-4bcb-b62f-2554bfa9d914"
+        "outputId": "3f2ffed6-9e03-464a-b87b-9ecee66d95c1"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m220.9/220.9 kB\u001b[0m \u001b[31m3.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.0/75.0 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m7.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/221.5 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.2/221.5 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m221.5/221.5 kB\u001b[0m \u001b[31m4.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.0/75.0 kB\u001b[0m \u001b[31m9.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.9/76.9 kB\u001b[0m \u001b[31m9.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
             "llmx 0.0.15a0 requires cohere, which is not installed.\n",
             "llmx 0.0.15a0 requires tiktoken, which is not installed.\u001b[0m\u001b[31m\n",
@@ -99,13 +99,13 @@
         "\n",
         "client = OpenAI(\n",
         "    # defaults to os.environ.get(\"OPENAI_API_KEY\")\n",
-        "    api_key=\"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\",\n",
+        "    api_key=\"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\",\n",
         ")"
       ],
       "metadata": {
         "id": "e15txcqaOUPg"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -135,7 +135,7 @@
       "metadata": {
         "id": "NDEFOTLg30j7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -149,22 +149,22 @@
           "height": 35
         },
         "id": "RLVrrM_R36NP",
-        "outputId": "95a90d6c-2b75-4a59-e0e8-25e170bf2d6c"
+        "outputId": "53d89829-845f-42e1-f240-cd7ce6d22bad"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2023-11-29T17:29:03.164225+08:00'"
+              "'2023-12-12T16:22:04.227104+08:00'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -206,7 +206,7 @@
       "metadata": {
         "id": "3erMMGQKjJkE"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -230,7 +230,7 @@
       "metadata": {
         "id": "ivQlzI8_7HQo"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "ERAifvdPZpys"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -279,7 +279,7 @@
       "metadata": {
         "id": "wSMwndq4OMlb"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,27 +292,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xfnILjMVKw3z",
-        "outputId": "eeb31cdf-1894-4892-c168-019a07a0846a"
+        "outputId": "470279a8-577b-4bba-ad10-c6ad1be95421"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "{\n",
-            "    \"id\": \"chatcmpl-8QBBJJ9y9W4pQW2TGg0Bl4oDOw4fK\",\n",
+            "    \"id\": \"chatcmpl-8UsJjSUS5yWfJMc6ff902y5MHrinJ\",\n",
             "    \"choices\": [\n",
             "        {\n",
             "            \"finish_reason\": \"tool_calls\",\n",
             "            \"index\": 0,\n",
             "            \"message\": {\n",
-            "                \"content\": \"Hello there! I hope you're experiencing a smooth arrival in Singapore. Let's get you synchronized with the local time right away. One moment while I fetch that information for you.\",\n",
+            "                \"content\": \"Hello there! I hope you're enjoying the beginning of your adventure in Singapore. It's such a vibrant and fascinating city! Let me quickly find out the current time for you. One moment, please.\",\n",
             "                \"role\": \"assistant\",\n",
             "                \"function_call\": null,\n",
             "                \"tool_calls\": [\n",
             "                    {\n",
-            "                        \"id\": \"call_qaYx7EYHfPfObjbIoRpYeasA\",\n",
+            "                        \"id\": \"call_51r4x2cs4gsX7jLTWxFIn45F\",\n",
             "                        \"function\": {\n",
             "                            \"arguments\": \"{\\\"city\\\":\\\"Singapore\\\",\\\"continent\\\":\\\"Asia\\\"}\",\n",
             "                            \"name\": \"get_current_time\"\n",
@@ -323,14 +323,14 @@
             "            }\n",
             "        }\n",
             "    ],\n",
-            "    \"created\": 1701250201,\n",
+            "    \"created\": 1702369327,\n",
             "    \"model\": \"gpt-4-1106-preview\",\n",
             "    \"object\": \"chat.completion\",\n",
             "    \"system_fingerprint\": \"fp_a24b4d720c\",\n",
             "    \"usage\": {\n",
-            "        \"completion_tokens\": 56,\n",
-            "        \"prompt_tokens\": 137,\n",
-            "        \"total_tokens\": 193\n",
+            "        \"completion_tokens\": 61,\n",
+            "        \"prompt_tokens\": 134,\n",
+            "        \"total_tokens\": 195\n",
             "    }\n",
             "}\n"
           ]
@@ -348,9 +348,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xi1uIJRnxGHt",
-        "outputId": "fff42647-2831-4039-8cd6-c5b8612f8c28"
+        "outputId": "102e2352-c83b-443a-b532-80c8cbf076c7"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -360,14 +360,14 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 19
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#### Use the response finally use this tool"
+        "#### Use the response to use this tool"
       ],
       "metadata": {
         "id": "5MmVN9FE5StJ"
@@ -385,22 +385,22 @@
           "height": 35
         },
         "id": "kZsCRYnwxgMz",
-        "outputId": "2e94290b-a994-463f-93e6-ebb802549ee4"
+        "outputId": "07e54e19-1e82-4db2-d8a9-9cb4d7a52838"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'2023-11-29T17:31:30.622935+08:00'"
+              "'2023-12-12T16:22:25.033258+08:00'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 21
         }
       ]
     },
