--- a/PredictionAnalyse.ipynb
+++ b/PredictionAnalyse.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpKMViAf7kWbyqx//1zMo9",
+      "authorship_tag": "ABX9TyNQt81vQJK/eZlp3yqPFjYI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,17 @@
     {
       "cell_type": "code",
       "source": [
+        "diseases = set(cell.value.lower() for cell in label)"
+      ],
+      "metadata": {
+        "id": "QUk4TIYa8fgl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "prediction_labels = {}\n",
         "for ix, cell in enumerate(predictions):\n",
         "    if cell.value:\n",
@@ -78,7 +89,10 @@
         "        cell_values = cell.value.split(',')\n",
         "        for cell_value in cell_values:\n",
         "            cell_value = cell_value.strip(' \"')\n",
-        "            cell_value = cell_value.lower()"
+        "            cell_value = cell_value.lower()\n",
+        "\n",
+        "            if cell_value not in diseases:\n",
+        "                print(f\"row {ix} value {cell_value} does not match\")"
       ],
       "metadata": {
         "id": "0fqPgtsB40UF"
